[package]
name = "gary-drillx"
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"
keywords = ["solana", "crypto", "mining"]

[features]
default = ["verify", "solve"]
verify = ["equix-gpu-rust/verify", "sha3"]
solve = ["sha3", "equix-gpu-rust/default"]

[dependencies]
sha3 = { version = "0.10.8", optional = true }
equix-gpu-rust = { path = "extern-crates/equix-gpu-rust", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"

[dev-dependencies]
cust = { git = "https://github.com/Rust-GPU/Rust-CUDA", rev = "afb147ed51fbb14b758e10a0a24dbc2311a52b82" }
