[package]
name = "gary-pool-api"
description = "API for interacting with the GARY mining pool program"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
bytemuck.workspace = true
gary-drillx.workspace = true
num_enum.workspace = true
gary-api.workspace = true
gary-boost-api.workspace = true
solana-program.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
steel.workspace = true

