[package]
name = "hashx"
version = "0.3.1"
authors = ["The Tor Project, Inc.", "Micah Elizabeth Scott <beth@torproject.org>"]
edition = "2021"
homepage = "https://gitlab.torproject.org/tpo/core/arti/-/wikis/home"
description = "Hash function family designed for ASIC-resistant client puzzles"
keywords = ["cryptography"]
categories = ["cryptography"]
repository = "https://gitlab.torproject.org/tpo/core/arti.git/"

# This crate is a new implementation of algorithms developed and implemented
# by tevador here: https://github.com/tevador/equix/. The original is
# Copyright (c) 2020 tevador <tevador@gmail.com>
# and licensed under the terms of the LGPL version 3.0.
#
# If tevador is okay with it, we intend to re-license this crate as
# MIT OR Apache-2.0. Thus, do not contribute to this crate unless you
# are okay with these licensing terms.
license = "LGPL-3.0-only"

[features]
default = ["arrayvec/default"]
cuda = ["cust_core", "arrayvec/cuda"]

[dependencies]
arrayvec = { path = "../arrayvec", optional = true }
blake2 = { path = "../blake2" }
cust_core = { git = "https://github.com/Rust-GPU/Rust-CUDA", rev = "afb147ed51fbb14b758e10a0a24dbc2311a52b82", optional = true }
rand_core = "0.6.4"
thiserror-no-std = "2.0.2"